Add CLOCK time tracking support
- Add insertClockStart and insertClockFinish commands
- Add Ctrl+K Ctrl+K Ctrl+C Ctrl+S/F hotkeys
- Add clockRoundMinutes setting for time rounding
- CLOCK entries use backticks like other timestamps
- Place CLOCK entries after timestamp lines
- Sort CLOCK entries by time (newest at bottom)
- Prevent multiple open CLOCK entries
- Calculate duration automatically
- Add 8 integration tests (all passing)
- Update README with CLOCK documentation
- Add CLOCK_USAGE.md, CLOCK_IMPLEMENTATION.md, CLOCK_TESTING.md

--- a/package.json
+++ b/package.json
@@ -44,6 +44,14 @@
         "title": "Markdown Org: Insert DEADLINE Timestamp"
       },
       {
+        "command": "markdown-org.insertClockStart",
+        "title": "Markdown Org: Insert CLOCK Start"
+      },
+      {
+        "command": "markdown-org.insertClockFinish",
+        "title": "Markdown Org: Insert CLOCK Finish"
+      },
+      {
         "command": "markdown-org.showAgendaDay",
         "title": "Markdown Org: Show Agenda (Day)"
       },
@@ -109,6 +117,16 @@
       {
         "command": "markdown-org.insertDeadline",
         "key": "ctrl+k ctrl+k d",
+        "when": "editorTextFocus && editorLangId == markdown"
+      },
+      {
+        "command": "markdown-org.insertClockStart",
+        "key": "ctrl+k ctrl+k ctrl+c ctrl+s",
+        "when": "editorTextFocus && editorLangId == markdown"
+      },
+      {
+        "command": "markdown-org.insertClockFinish",
+        "key": "ctrl+k ctrl+k ctrl+c ctrl+f",
         "when": "editorTextFocus && editorLangId == markdown"
       },
       {
@@ -182,6 +200,10 @@
           "type": "string",
           "default": "ALL",
           "description": "Currently selected tag filter for agenda view"
+        },
+        "markdown-org.clockRoundMinutes": {
+          "type": "number",
+          "description": "Round CLOCK timestamps to specified minutes (e.g., 15, 30). Leave empty to disable rounding."
         }
       }
     }
