--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,42 +5,24 @@ on:
     tags:
       - 'v*'
 
-permissions:
-  contents: write
-
 jobs:
-  build:
+  release:
     runs-on: ubuntu-latest
-    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
       
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: 18
       
-      - name: Install dependencies
-        run: npm install
+      - run: npm ci
       
-      - name: Compile
-        run: npm run compile
+      - run: npm run compile
       
-      - name: Install vsce
-        run: npm install -g @vscode/vsce
+      - run: npx @vscode/vsce package
       
-      - name: Package extension
-        run: vsce package --no-yarn --skip-license
-      
-      - name: Get version from tag
-        id: get_version
-        run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
-      
-      - name: Create Release
-        uses: ncipollo/release-action@v1
+      - uses: softprops/action-gh-release@v1
         with:
-          artifacts: "*.vsix"
-          token: ${{ secrets.GITHUB_TOKEN }}
-          name: "v${{ steps.get_version.outputs.VERSION }}"
-          body: "See [CHANGELOG.md](https://github.com/${{ github.repository }}/blob/master/CHANGELOG.md) for details."
+          files: '*.vsix'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
